--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
       </div>
     </div>
     <script type="text/javascript" src="app.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
