--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main-container">
       <div id="overlay" class="start">
         <h2 class="title">Wheel of Success</h2>
-        <a class="start-btn btn__reset">Start Game</a>
+        <a class="btn__start btn__reset">Start Game</a>
       </div>
 
       <div id="banner" class="section">
@@ -42,6 +42,8 @@
         </ol>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
